Enrich planetary environments

--- a/index.html
+++ b/index.html
@@ -43,8 +43,19 @@
         <div class="sky-decoration sky-decoration--stars" aria-hidden="true"></div>
         <div class="sky-decoration sky-decoration--aurora" aria-hidden="true"></div>
         <div class="sky-decoration sky-decoration--rings" aria-hidden="true"></div>
+        <div class="world__skyline" aria-hidden="true">
+          <div class="sky-object sky-object--one"></div>
+          <div class="sky-object sky-object--two"></div>
+          <div class="sky-object sky-object--three"></div>
+        </div>
       </div>
       <div class="world__ground" id="world-ground">
+        <div class="world__groundscape" aria-hidden="true">
+          <div class="ground-feature ground-feature--left"></div>
+          <div class="ground-feature ground-feature--center"></div>
+          <div class="ground-feature ground-feature--right"></div>
+          <div class="ground-feature ground-feature--floating"></div>
+        </div>
         <div class="world__terrain" aria-hidden="true">
           <div class="terrain terrain--left"></div>
           <div class="terrain terrain--center"></div>
